--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -1012,9 +1012,25 @@
     "\n",
     "**Answer:**\n",
     "\n",
-    "**99.54% of the Healthy loans were correctly predicted as Healthy by the model**\n",
+    "### **- The model predicts well the Healthy and the High-risk loans**\n",
     "\n",
-    "**94.88% of the High-risk loans were correctly predicted as High-risk by the model**"
+    "### Accuracy\n",
+    "\n",
+    "- The accuracy of the model is 99.39%. This means that 99.39% of the loans were correctly predicted as Healthy and High Risk loans.\n",
+    "\n",
+    "### Precision\n",
+    "\n",
+    "- The precision score for High-risk loans is 87.33%. This means 87.33% of the Predicted High-risk loans are actually High-risk loans.\n",
+    "\n",
+    "- The precision score for Healthy loans is 99.83%. This means 99.83% of the Predicted Healthy loans are actually Healthy loans.\n",
+    "\n",
+    "### Recall\n",
+    "\n",
+    "- The Recall score for High-risk loans is 94.88%. This means 94.88% of the High-risk loans were correctly predicted as High-risk by the model.\n",
+    "\n",
+    "- The Recall score for Healthy loans is 99.54%. This means 99.54% of the Healthy loans were correctly predicted as Healthy by the model.\n",
+    "\n",
+    "\n"
    ]
   },
   {
